--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="/fontawesome/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="/fontawesome/css/solid.min.css" />
     <title>Server Manager</title>
   </head>
   <body>
